# com.github.zeromq-lzmq

./: .build  CMakeLists.txt  Jenkinsfile  build_artifact.py  dependency-log-lua5.4.xml  dependency-log.xml
.github/workflows/: main.yml
lzmq/: CMakeLists.txt  __README__.txt
lzmq/installer/lua5.1/: lzmq.xml
lzmq/installer/lua5.2/: lzmq.xml
lzmq/installer/lua5.3/: lzmq.xml
lzmq/installer/lua5.4/: lzmq.xml
lzmq/patches/: 001_add_missing_stdlib_h.diff  002_lowercase_includes.diff  003_use_static_libzmq.diff  004_link_lzmq_as_cxx.diff  005_add_libs.diff  006_link_stdlib_on_mingw_statically.diff
